fix(nav-links): settings wrapped under LIs.

--- a/common/app/Nav/nav.less
+++ b/common/app/Nav/nav.less
@@ -45,9 +45,6 @@
   background-color: @brand-primary;
   text-align: center;
 
-  @media (min-width: @screen-md-min) {
-    margin-right:0;
-  }
   @media (min-width: @screen-md-max) and (max-width: 991px) {
     left: 0;
     margin-right: 0;
@@ -305,7 +302,7 @@ li.nav-avatar {
 .bins {
 
   .disabled-button {
-    color: whitesmoke; 
+    color: whitesmoke;
   }
   .enabled-button {
     color: black;
